--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: pip install -r requirements.txt
         
       - name: Run tests
-        run: coverage run tests/
+        run: coverage run tests/test_smoke.py
         
       - name: Tests report
         run: coverage report
