--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Run tests
         run: python -m pytest tests/
         
-      - name: Tests report
-        run: coverage report
+      - name: Coverage report
+        run: coverage report -m
